--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "pancake-subgraph",
-  "description": "PancakeSwap Subgraph",
+  "name": "123swap-subgraph",
+  "description": "123swap Subgraph",
   "version": "2.0.0",
   "repository": "git@github.com:pancakeswap/pancake-subgraph.git",
-  "author": "PancakeSwap",
+  "author": "123swap",
   "license": "MIT",
   "scripts": {
     "codegen:blocks": "graph codegen subgraphs/blocks.yaml",
@@ -22,28 +22,25 @@
     "build:smartchef": "graph build subgraphs/smartchef.yaml",
     "build:timelock": "graph build subgraphs/timelock.yaml",
     "build:trading": "graph build subgraphs/trading.yaml",
-    "deploy:blocks": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/blocks subgraphs/blocks.yaml",
-    "deploy:exchange": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/exchange subgraphs/exchange.yaml",
-    "deploy:pairs": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/pairs subgraphs/pairs.yaml",
-    "deploy:prediction": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/prediction subgraphs/prediction.yaml",
-    "deploy:profile": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/profile subgraphs/profile.yaml",
-    "deploy:smartchef": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/smartchef subgraphs/smartchef.yaml",
-    "deploy:timelock": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/timelock subgraphs/timelock.yaml",
-    "deploy:trading": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ pancakeswap/trading-competition-v1 subgraphs/trading.yaml",
+    "deploy:blocks": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ onetwothreeswap/blocks subgraphs/blocks.yaml",
+    "deploy:exchange": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ onetwothreeswap/exchange subgraphs/exchange.yaml",
+    "deploy:pairs": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ onetwothreeswap/pairs subgraphs/pairs.yaml",
+    "deploy:prediction": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ onetwothreeswap/prediction subgraphs/prediction.yaml",
+    "deploy:profile": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ onetwothreeswap/profile subgraphs/profile.yaml",
+    "deploy:smartchef": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ onetwothreeswap/smartchef subgraphs/smartchef.yaml",
+    "deploy:timelock": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ onetwothreeswap/timelock subgraphs/timelock.yaml",
+    "deploy:trading": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ onetwothreeswap/trading-competition-v1 subgraphs/trading.yaml",
     "format:check": "prettier --check '*/**/*.{js,ts}'",
     "format:write": "prettier --write '*/**/*.{js,ts}'",
-    "lint": "eslint '*/**/*.{js,ts}'"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn format:check",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
+    "lint": "eslint '*/**/*.{js,ts}'",
+    "create-local": "graph create pancakeswap/pairs --node http://127.0.0.1:8020 subgraphs/pairs.yaml",
+    "deploy-local": "graph deploy pancakeswap/pairs --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020 subgraphs/pairs.yaml",
+    "watch-local": "graph deploy pancakeswap/pairs --watch --debug --node http://127.0.0.1:8020/ --ipfs http://localhost:5001 subgraphs/pairs.yaml"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
-    "@graphprotocol/graph-cli": "^0.20.0",
+    "@graphprotocol/graph-cli": "^0.20.1",
     "@graphprotocol/graph-ts": "^0.20.0",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
@@ -52,5 +49,8 @@
     "husky": "^4.3.8",
     "prettier": "^2.3.0",
     "typescript": "^4.3.2"
+  },
+  "dependencies": {
+    "keytar": "^7.7.0"
   }
 }
