--- a/subgraphs/exchange.yaml
+++ b/subgraphs/exchange.yaml
@@ -1,6 +1,6 @@
 specVersion: 0.0.2
-description: PancakeSwap is a decentralized protocol for automated token exchange on Binance Smart Chain.
-repository: https://github.com/pancakeswap
+description: 123swap is a decentralized protocol for automated token exchange on Binance Smart Chain.
+repository: https://github.com/123swapProject/123swap-subgraph
 schema:
   file: ./exchange.graphql
 dataSources:
@@ -8,9 +8,9 @@ dataSources:
     name: Factory
     network: bsc
     source:
-      address: '0xcA143Ce32Fe78f1f7019d7d551a6402fC5350c73'
+      address: '0xAE105BEd44f032b9fd39A2CACffdF1705dF0d40E'
       abi: Factory
-      startBlock: 6809737
+      startBlock: 8543330
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
