--- a/subgraphs/smartchef.yaml
+++ b/subgraphs/smartchef.yaml
@@ -1,6 +1,6 @@
 specVersion: 0.0.2
-description: PancakeSwap is a decentralized protocol for automated token exchange on Binance Smart Chain.
-repository: https://github.com/pancakeswap
+description: 123swap is a decentralized protocol for automated token exchange on Binance Smart Chain.
+repository: https://github.com/123swapProject/123swap-subgraph
 schema:
   file: ./smartchef.graphql
 dataSources:
@@ -8,7 +8,7 @@ dataSources:
     name: SmartChefFactory
     network: bsc
     source:
-      address: '0x927158Be21Fe3D4da7E96931bb27Fd5059A8CbC2'
+      address: '0xe424ea1a6C6075ef1A3ad4dBC36Ba9633096bE05'
       abi: SmartChefFactory
       startBlock: 7151302
     mapping:
